tests/invalid/UnionType_Invalid_25.whiley
type named is null | &int

method f(named rec) -> (named r):
    *rec = 1
    return rec